# pytecode

./: .gitignore  ARCHITECTURE.md  CHANGES.txt  Cargo.toml  DESIGN-EDITING-MODEL.md  LICENSE  MANIFEST.in  README.md  example.py  pyproject.toml  requirements_dev.txt  run.py  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  rust-bench.yml
crates/pytecode-archive/: Cargo.toml
crates/pytecode-archive/benches/: jar_read.rs
crates/pytecode-archive/examples/: rewrite_jar.rs
crates/pytecode-archive/src/: lib.rs
crates/pytecode-archive/tests/: jar.rs
crates/pytecode-cli/: Cargo.toml
crates/pytecode-cli/src/: deobfuscate.rs  jar_patcher.rs  lib.rs  main.rs
crates/pytecode-cli/tests/: compat_manifest.rs  deobfuscate.rs  patch_jar.rs  rewrite_smoke.rs
crates/pytecode-engine/: Cargo.toml
crates/pytecode-engine/benches/: pipeline.rs
crates/pytecode-engine/examples/: finalize_main.rs
crates/pytecode-engine/fixtures/java/: Color.java  FieldShowcase.java  GenericClass.java  InstructionShowcase.java  Java25Features.java  LambdaShowcase.java  MultiInterface.java  PatternMatching.java  RecordClass.java  SealedHierarchy.java  SwitchExpressions.java  TypeAnnotationShowcase.java  VarArgs.java
crates/pytecode-engine/src/: bytes.rs  constants.rs  descriptors.rs  error.rs  fixtures.rs  indexes.rs  lib.rs  modified_utf8.rs  reader.rs  signatures.rs  stages.rs  transform.rs  writer.rs
crates/pytecode-engine/src/analysis/: hierarchy.rs  mod.rs  verify.rs
crates/pytecode-engine/src/model/: constant_pool_builder.rs  debug_info.rs  labels.rs  mod.rs  operands.rs
crates/pytecode-engine/src/raw/: attributes.rs  constant_pool.rs  info.rs  instructions.rs  mod.rs  stub.rs
crates/pytecode-engine/src/transform/: matcher_spec.rs  mod.rs  pipeline_spec.rs  transform_spec.rs
crates/pytecode-engine/tests/: analysis.rs  attribute_foundation.rs  descriptors.rs  fixtures.rs  model.rs  modified_utf8.rs  raw_roundtrip.rs  raw_unit_coverage.rs  signatures.rs  transform.rs  verifier.rs
crates/pytecode-python/: Cargo.toml
crates/pytecode-python/src/: analysis.rs  archive.rs  attributes.rs  lib.rs  model.rs  transforms.rs
docs/: OVERVIEW.md  benchmarks.md
docs/api/: index.html  pytecode.html  search.js
docs/architecture/: current-architecture.md  target-architecture.md
docs/design/: cfg-validation-research.md  editing-model.md  pytecode-design.md  pytecode-engine-python-parity-audit.md  pytecode-rust-design.md  validation-framework.md
docs/experiments/: baseline-performance.md  cython-benchmarks.md  cython-migration.md  phase-1-benchmarks.md  phase-3-benchmarks.md  phase-4-benchmarks.md  phase-5-benchmarks.md  phase-6-benchmarks.md  rust-migration-overview.md
docs/project/: quality-gates.md  roadmap.md  rust-jvms-25-audit.md
examples/: deobfuscate.py  patch_jar.py
pytecode/: __init__.py  _api.py  _attribute_clone.py  _rust.py  _rust.pyi  _utils.py  analysis.py  archive.py  attributes.py  bytes_utils.py  class_reader.py  class_writer.py  constant_pool.py  constant_pool_builder.py  constants.py  debug_info.py  descriptors.py  hierarchy.py  info.py  instructions.py  jar.py  labels.py  model.py  modified_utf8.py  operands.py  transforms.py  utils.py  verify.py
pytecode/_internal/: __init__.py  _bytes_utils_cy.pxd  _bytes_utils_cy.pyx  bytes_utils.py  cython_import.py  rust_import.py
pytecode/analysis/: __init__.py  _analysis_cy.pyx  _analysis_py.py  hierarchy.py  verify.py
pytecode/archive/: __init__.py
pytecode/classfile/: __init__.py  _attributes_cy.pxd  _attributes_cy.pyx  _attributes_py.py  _descriptors_cy.pyx  _instructions_cy.pxd  _instructions_cy.pyx  _modified_utf8_cy.pyx  _modified_utf8_py.py  _reader_cy.pyx  _reader_py.py  _rust_bridge.py  _writer_cy.pyx  _writer_py.py  attributes.py  bytecode.py  constant_pool.py  constants.py  descriptors.py  info.py  instructions.py  modified_utf8.py  reader.py  writer.py
pytecode/edit/: __init__.py  _attribute_clone.py  _attribute_clone_cy.pyx  _attribute_clone_py.py  _constant_pool_builder_cy.pyx  _constant_pool_builder_py.py  _debug_info_cy.pyx  _debug_info_py.py  _labels_cy.pxd  _labels_cy.pyx  _labels_py.py  _model_cy.pyx  _model_py.py  _operands_cy.pxd  _operands_cy.pyx  _operands_py.py  _rust_bridge_model.py  constant_pool_builder.py  debug_info.py  labels.py  model.py  operands.py
pytecode/transforms/: __init__.py  class_transforms.py  matchers.py  pipeline.py  rust.py  rust_matchers.py  rust_pipeline.py  rust_transforms.py
pytecode/types/: attributes.py  constant_pool.py  constants.py  info.py
src/: archive.rs  binary_io.rs  lib.rs
src/analysis/: hierarchy.rs  mod.rs  verify.rs
src/classfile/: attributes.rs  code.rs  constant_pool.rs  constants.rs  descriptors.rs  instructions.rs  mod.rs  modified_utf8.rs
src/edit/: constant_pool_builder.rs  mod.rs
tests/: cfg_oracle.py  helpers.py  javap_parser.py  jvm_harness.py  test_analysis.py  test_api_docs.py  test_attributes.py  test_benchmark_jar_pipeline.py  test_bytes_utils.py  test_cfg_oracle.py  test_class_reader.py  test_class_writer.py  test_constant_pool.py  test_constant_pool_builder.py  test_debug_info.py  test_descriptors.py  test_helpers.py  test_hierarchy.py  test_instructions.py  test_jar.py  test_javap_parser.py  test_labels.py  test_model.py  test_modified_utf8.py  test_operands.py  test_parse_wiki_instructions.py  test_run_script.py  test_rust_bindings.py  test_rust_bridge_roundtrip.py  test_rust_matcher_spec.py  test_rust_phase0_wrappers.py  test_rust_phase2_descriptors.py  test_rust_phase3_code.py  test_rust_phase3_constant_pool.py  test_rust_phase4_constant_pool_builder.py  test_rust_phase5_hierarchy.py  test_rust_phase5_verify.py  test_rust_phase6_archive.py  test_rust_transforms.py  test_transforms.py  (+4 more)
tools/: bench_full_comparison.py  bench_transform_pipeline.py  benchmark_cython.py  benchmark_jar_pipeline.py  compare_rust_python.py  compare_rust_python_benchmarks.py  generate_api_docs.py  parse_wiki_instructions.py  profile_jar_pipeline.py  profile_rust_flamegraph.py  validate_release_tag.py
(+42 files in other folders)
