[workspace]
members = [
    "crates/pytecode-engine",
    "crates/pytecode-archive",
    "crates/pytecode-cli",
    "crates/pytecode-python",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.94"
license = "MIT"
homepage = "https://github.com/smithtrenton/pytecode"
repository = "https://github.com/smithtrenton/pytecode"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[workspace.dependencies]
assert_cmd = "2.1.1"
bitflags = "2.9.4"
clap = { version = "4.5.38", features = ["derive"] }
pyo3 = { version = "0.24.2", features = ["extension-module", "abi3-py311"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.18"
walkdir = "2.5.0"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
