[workspace]
members = [
    "crates/pytecode-engine",
    "crates/pytecode-archive",
    "crates/pytecode-cli",
    "crates/pytecode-python",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.94"
license = "MIT"
homepage = "https://github.com/smithtrenton/pytecode"
repository = "https://github.com/smithtrenton/pytecode"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[workspace.dependencies]
assert_cmd = "2.2.0"
bitflags = "2.11.0"
clap = { version = "4.6.0", features = ["derive"] }
pyo3 = { version = "0.28.3", features = ["abi3-py312"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
walkdir = "2.5.0"
zip = { version = "8.5.1", default-features = false, features = ["deflate", "unreserved"] }
