[build-system]
requires = ["setuptools>=82.0.1,<83.0.0","Cython>=3.1.1,<4.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
ext-modules = [
  {name = "pytecode._internal._bytes_utils_cy", sources = ["pytecode/_internal/_bytes_utils_cy.pyx"]},
  {name = "pytecode.classfile._modified_utf8_cy", sources = ["pytecode/classfile/_modified_utf8_cy.pyx"]},
  {name = "pytecode.classfile._descriptors_cy", sources = ["pytecode/classfile/_descriptors_cy.pyx"]},
  {name = "pytecode.classfile._attributes_cy", sources = ["pytecode/classfile/_attributes_cy.pyx"]},
  {name = "pytecode.classfile._instructions_cy", sources = ["pytecode/classfile/_instructions_cy.pyx"]},
  {name = "pytecode.classfile._reader_cy", sources = ["pytecode/classfile/_reader_cy.pyx"]},
  {name = "pytecode.classfile._writer_cy", sources = ["pytecode/classfile/_writer_cy.pyx"]},
  {name = "pytecode.edit._attribute_clone_cy", sources = ["pytecode/edit/_attribute_clone_cy.pyx"]},
  {name = "pytecode.edit._constant_pool_builder_cy", sources = ["pytecode/edit/_constant_pool_builder_cy.pyx"]},
  {name = "pytecode.edit._debug_info_cy", sources = ["pytecode/edit/_debug_info_cy.pyx"]},
  {name = "pytecode.edit._labels_cy", sources = ["pytecode/edit/_labels_cy.pyx"]},
  {name = "pytecode.edit._model_cy", sources = ["pytecode/edit/_model_cy.pyx"]},
  {name = "pytecode.edit._operands_cy", sources = ["pytecode/edit/_operands_cy.pyx"]},
  {name = "pytecode.analysis._analysis_cy", sources = ["pytecode/analysis/_analysis_cy.pyx"]},
]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pytecode*"]

[tool.setuptools.package-data]
pytecode = ["py.typed", "**/*.pxd"]

[project]
name = "pytecode"
version = "0.0.3"
description = "Python library for parsing, manipulating, and emitting JVM class files"
readme = "README.md"
authors = [{ name = "Trenton Smith" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
keywords = ["bytecode", "classfile", "java", "jvm"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/smithtrenton/pytecode"
Documentation = "https://smithtrenton.github.io/pytecode/"
Repository = "https://github.com/smithtrenton/pytecode"
Issues = "https://github.com/smithtrenton/pytecode/issues"
Changelog = "https://github.com/smithtrenton/pytecode/releases"

[dependency-groups]
dev = [
  "basedpyright>=1.38.3,<2.0.0",
  "Cython>=3.1.1,<4.0.0",
  "pdoc>=16.0.0,<17.0.0",
  "pytest>=9.0.2,<10.0.0",
  "ruff>=0.15.7,<0.16.0",
  "setuptools>=82.0.1,<83.0.0",
]

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["pytecode", "run.py", "tools", "tests"]
exclude = ["output", "venv", ".venv"]
reportMissingTypeStubs = false
reportAttributeAccessIssue = false
reportPrivateUsage = false

[tool.ruff]
target-version = "py314"
line-length = 120
extend-exclude = [
  "output",
  "venv",
  ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
  "oracle: JVM-backed differential CFG validation against the ASM oracle",
]

[tool.uv]
required-version = ">=0.10.12"
