[build-system]
requires = ["maturin>=1.9.4,<2.0.0"]
build-backend = "maturin"

[project]
name = "pytecode"
version = "0.0.3"
description = "Python library for parsing, manipulating, and emitting JVM class files"
readme = "README.md"
authors = [{ name = "Trenton Smith" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
keywords = ["bytecode", "classfile", "java", "jvm"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/smithtrenton/pytecode"
Documentation = "https://smithtrenton.github.io/pytecode/"
Repository = "https://github.com/smithtrenton/pytecode"
Issues = "https://github.com/smithtrenton/pytecode/issues"
Changelog = "https://github.com/smithtrenton/pytecode/releases"

[project.optional-dependencies]
dev = [
  "basedpyright>=1.38.3,<2.0.0",
  "maturin>=1.9.4,<2.0.0",
  "pdoc>=16.0.0,<17.0.0",
  "pytest>=9.0.2,<10.0.0",
  "ruff>=0.15.7,<0.16.0",
]

[tool.maturin]
manifest-path = "crates/pytecode-python/Cargo.toml"
python-source = "."
module-name = "pytecode._rust"
include = ["pytecode/*.pyi", "pytecode/py.typed"]

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["pytecode", "run.py", "tools", "tests"]
exclude = ["output", "venv", ".venv"]
reportMissingTypeStubs = false
reportAttributeAccessIssue = false
reportPrivateUsage = false

[tool.ruff]
target-version = "py314"
line-length = 120
extend-exclude = [
  "output",
  "venv",
  ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
  "oracle: JVM-backed differential CFG validation against the ASM oracle",
]

[tool.uv]
required-version = ">=0.10.12"
